--- a/less/layout.less
+++ b/less/layout.less
@@ -87,6 +87,7 @@
 
     @media (max-width: 686px) {
         flex-direction: column;
+        align-items: normal;
 
         p {
             text-align: left;
